BEAUT-981: [BUG-Beautify] Event box: RSVP button spills out of frame

--- a/beautify-la/public/content/style.css
+++ b/beautify-la/public/content/style.css
@@ -4485,11 +4485,10 @@ div.placeholder-custom {
           font-size: 1em;
           line-height: 26px; } }
   .new-spot .spot-right {
-    float: left;
     position: relative;
     color: #303030;
     font-family: 'lato', sans-serif;
-    float: left;
+    float: right;
     width: 67%;
     font-size: 14px; }
     @media (max-width: 979px) {
@@ -4781,7 +4780,6 @@ div.placeholder-custom {
         float: right;
         font-family: bebas_neueregular, sans-serif;
         background: #ff4527;
-        margin-right: -1px;
         display: block;
         text-decoration: none;
         width: 30%;
