--- a/beautify-la/src/assets/css/sass/pages/company/list/_list.scss
+++ b/beautify-la/src/assets/css/sass/pages/company/list/_list.scss
@@ -211,11 +211,10 @@
     }
 
     .spot-right{
-        float: left;
         position: relative;
         color:#303030;
         font-family: 'lato', sans-serif;
-        float:left;
+        float:right;
         width:67%;
         font-size:14px;
 
@@ -602,7 +601,6 @@
                 float: right;
                 font-family: bebas_neueregular, sans-serif;
                 background: #ff4527;
-                margin-right: -1px;
                 display: block;
                 text-decoration: none;
                 width: 30%;
